[gd_scene load_steps=5 format=2]

[ext_resource path="res://Props/GameManager.gd" type="Script" id=1]
[ext_resource path="res://Sound/Child's Nightmare.ogg" type="AudioStream" id=2]
[ext_resource path="res://Sound/powerup_sound.wav" type="AudioStream" id=3]
[ext_resource path="res://Sound/game_end.wav" type="AudioStream" id=4]

[node name="GameManager" type="Node"]
script = ExtResource( 1 )

[node name="PowerUpTimer" type="Timer" parent="."]
wait_time = 3.001
one_shot = true
autostart = true

[node name="StartTimer" type="Timer" parent="."]
wait_time = 0.001
autostart = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -20.0

[node name="CountdownSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
pitch_scale = 2.0

[node name="WinSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
pitch_scale = 2.0

[connection signal="timeout" from="PowerUpTimer" to="." method="_on_PowerUpTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
